force-app/main/default/objects/rewardsgenius__Error_Log__c/fields/rewardsgenius__Location__c.field-meta.xml
<CustomField>
    <fullName>rewardsgenius__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>