force-app/main/default/objects/rewardsgenius__Error_Log__c/fields/rewardsgenius__Message__c.field-meta.xml
<CustomField>
    <fullName>rewardsgenius__Message__c</fullName>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>