force-app/main/default/objects/rewardsgenius__Error_Log__c/fields/rewardsgenius__Origin_Location__c.field-meta.xml
<CustomField>
    <fullName>rewardsgenius__Origin_Location__c</fullName>
    <label>Origin Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>